removed unchecked and deprecated code